[project]
name = "housing-price-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.0",
    "pandas-stubs~=2.3.3",
    "plotly-express>=0.4.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "scipy-stubs~=1.16.3",
    "xgboost>=3.1.3",
]
